--- a/resources/lang.yml
+++ b/resources/lang.yml
@@ -94,6 +94,27 @@ state:
   kick-success: "ㅊ &a已将「%player%」移出政权"
   kicked: "ㅅ &c你已被移出「%state%」"
   invite-expired: "ㅈ &7入国邀请已过期"
+  tpa-usage: "ㅅ &c用法 /goc tpa <player>|accept|deny"
+  tpa-target-offline: "ㅅ &c玩家「%player%」不在线"
+  tpa-self: "ㅅ &c你不能向自己发送传送请求"
+  tpa-other-state: "ㅅ &c只能向同一政权的成员发送传送请求"
+  tpa-cooldown: "ㅅ &c传送冷却中, 请在 %time% 后再试"
+  tpa-pending: "ㅈ &7你已向「%player%」发送传送请求, 剩余 %time%"
+  tpa-target-busy: "ㅅ &c「%player%」正在处理其他传送请求, 请稍后再试"
+  tpa-request-sent: "ㅊ &a已向「%player%」发送传送请求, 有效期 %time%"
+  tpa-request-received: "ㅈ &7玩家「%player%」请求传送到你的位置, 输入 /goc tpa accept 或 /goc tpa deny (%time%)"
+  tpa-no-request: "ㅈ &7你当前没有待处理的传送请求"
+  tpa-request-expired: "ㅈ &7传送请求已过期"
+  tpa-requester-offline: "ㅈ &7请求玩家已离线, 传送请求自动取消"
+  tpa-state-changed: "ㅅ &c你们不再属于同一政权, 传送请求已取消"
+  tpa-deny-confirm: "ㅊ &a已拒绝「%player%」的传送请求"
+  tpa-denied: "ㅅ &c「%player%」拒绝了你的传送请求"
+  tpa-accept: "ㅊ &a你接受了「%player%」的传送请求, 将在 %time% 后完成传送"
+  tpa-wait: "ㅈ &7你的传送请求已被接受, 将在 %time% 后传送到「%player%」"
+  tpa-teleport-cancelled: "ㅅ &c传送失败: %reason%"
+  tpa-teleport-success: "ㅊ &a已传送到「%player%」的位置"
+  tpa-reason-offline: "目标玩家不在线"
+  tpa-reason-state: "不在同一政权"
   request-time-unlimited: "无限"
   join-usage: "ㅅ &c用法 /goc join <state> 或 /goc join accept|deny <player>"
   join-target-not-found: "ㅅ &c未找到名为「%state%」的政权"
