--- a/resources/lang.yml
+++ b/resources/lang.yml
@@ -5,38 +5,42 @@
 general:
   prefix: "&r"
   not-player: "ㅅ &c这个命令只能由玩家执行"
-  no-permission: "ㅅ &c你没有权限执行此操作"
+  no-permission: "ㅅ &c无效权限"
   invalid-number: "ㅅ &c请输入正确的数字"
   reloaded: "ㅊ &a配置与语言文件已重新加载"
   unknown-error: "ㅊ &c发生未知错误, 请联系管理员"
 
 camp:
-  help-header: "ㅊ &a该插件目前没有教程, 有问题来群里问"
+  help-header: "§8§m                                            "
   help-lines:
-    #- "§e/goc newstate <政权名> <地区名> &7- 创建政权（或留空自动命名）"
-    #- "§e/goc delstate &7- 解散自己的政权（领袖）"
-    #- "§e/goc newsector <地区名> &7- 为现有政权预留新的地区"
-    #- "§e/goc delsector <地区名> &7- 移除已有地区的立场引擎"
-    #- "§e/goc newgovernor <玩家> <地区名> &7- 指定地区的总督"
-    #- "§e/goc delgovernor <玩家> &7- 移除指定玩家的总督头衔"
-    #- "§e/goc info &7- 查看政权信息"
-    #- "§e/goc list &7- 查看当前世界的所有政权列表"
-    #- "§e/goc invite <玩家> &7- 邀请加入"
-    #- "§e/goc invite accept|deny &7- 同意/拒绝邀请"
-    #- "§e/goc join <政权名> &7- 申请加入其他政权"
-    #- "§e/goc join accept|deny [玩家] &7- 处理加入申请（领袖）"
-    #- "§e/goc tp <地区名> &7- 传送到所属政权的指定地区"
-    #- "§e/goc leave &7- 退出当前政权"
-    #- "§e/goc kick <玩家> &7- 踢出成员"
-    #- "§e/goc warcondemn <政权名> &7- 谴责目标政权, 开启宣战倒计时"
-    #- "§e/goc war <政权名> &7- 对目标宣战"
-    #- "§e/goc civilwar &7- 对当前政权发动内战"
-    #- "§e/goc bank [info] &7- 查看政权银行信息"
-    #- "§e/goc bank deposit <金额> &7- 向政权银行存款"
-    #- "§e/goc bank withdraw <金额> &7- 政权领袖取款"
-    #- "§e/goc bank log &7- 查看银行交易记录（领袖）"
-    #- "§e/goc tax <金额> &7- 调整政权税率（领袖）"
-    #- "§e/goc reload &7- 重载配置与语言"
+    - "§e/goc newstate <state> <sector> §7- 创建政权（或留空自动命名）"
+    - "§e/goc delstate §7- 解散自己的政权（领袖）"
+    - "§e/goc newsector <sector> §7- 为现有政权预留新的地区"
+    - "§e/goc delsector <sector> §7- 移除已有地区的立场引擎"
+    - "§e/goc givesector <sector> <state> §7- 向其他政权赠与自己政权的地区"
+    - "§e/goc newgovernor <player> <sector> §7- 指定地区的总督"
+    - "§e/goc delgovernor <player> §7- 移除指定玩家的总督头衔"
+    - "§e/goc invite <player> §7- 邀请加入"
+    - "§e/goc invite accept | deny §7- 同意/拒绝邀请"
+    - "§e/goc join <state> §7- 申请加入其他政权"
+    - "§e/goc join accept | deny <player> §7- 处理加入申请（领袖）"
+    - "§e/goc leave §7- 退出当前政权"
+    - "§e/goc kick <player> §7- 踢出成员"
+    - "§e/goc tp <sector> §7- 传送到所属政权的指定地区"
+    - "§e/goc tpa <player> §7- 申请传送到同政权成员位置"
+    - "§e/goc tpa accept | deny §7- 同意/拒绝传送申请"
+    - "§e/goc warcondemn <state> §7- 谴责目标政权, 开启宣战倒计时"
+    - "§e/goc war <state> §7- 对目标宣战"
+    - "§e/goc civilwar §7- 对当前政权发动内战"
+    - "§e/goc info §7- 查看政权信息"
+    - "§e/goc list §7- 查看当前世界的所有政权列表"
+    #- "§e/goc bank [info] §7- 查看政权银行信息"
+    #- "§e/goc bank deposit <金额> §7- 向政权银行存款"
+    #- "§e/goc bank withdraw <金额> §7- 政权领袖取款"
+    #- "§e/goc bank log §7- 查看银行交易记录（领袖）"
+    #- "§e/goc tax <金额> §7- 调整政权税率（领袖）"
+    #- "§e/goc reload §7- 重载配置与语言"
+    - "§8§m                                            "
   unknown: "ㅅ &c未知的子命令使用 /goc 查看帮助"
   not-found: "ㅅ &c未找到你的政权, 或你尚未加入任何政权"
   info-opening: "ㅈ &7正在打开你的政权信息..."
@@ -85,7 +89,7 @@ state:
   invite-already-member: "ㅅ &c玩家「%player%」已经是你的政权成员"
   invite-other-state: "ㅅ &c玩家「%player%」已经加入其他政权, 无法邀请"
   invite-sent: "ㅅ &c已向「%player」&7发送入国邀请, 邀请将在 %time% 后过期"
-  invite-received: "ㅅ &c你收到来自「%captain%」的邀请加入「%state%」请使用 /goc invite accept|deny(%time%)"
+  invite-received: "ㅈ &7你收到来自「%captain%」的邀请加入「%state%」请使用 &f/goc invite &aaccept&7|&cdeny &7(%time%)"
   no-invite: "ㅈ &7你当前没有待处理的邀请"
   join-success: "ㅊ &a你已加入「%state%」"
   invite-accepted-notify: "ㅊ &a玩家「%player%」已接受邀请加入「%state%」"
@@ -99,10 +103,10 @@ state:
   tpa-self: "ㅅ &c你不能向自己发送传送请求"
   tpa-other-state: "ㅅ &c只能向同一政权的成员发送传送请求"
   tpa-cooldown: "ㅅ &c传送冷却中, 请在 %time% 后再试"
-  tpa-pending: "ㅈ &7你已向「%player%」发送传送请求, 剩余 %time%"
+  tpa-pending: "ㅈ &7你已向「%player%」发送传送请求 (%time%)"
   tpa-target-busy: "ㅅ &c「%player%」正在处理其他传送请求, 请稍后再试"
-  tpa-request-sent: "ㅊ &a已向「%player%」发送传送请求, 有效期 %time%"
-  tpa-request-received: "ㅈ &7玩家「%player%」请求传送到你的位置, 输入 /goc tpa accept 或 /goc tpa deny (%time%)"
+  tpa-request-sent: "ㅊ &a已向「%player%」发送传送请求 (%time%)"
+  tpa-request-received: "ㅈ &7玩家「%player%」请求传送到你的位置, 请使用 &f/goc tpa &aaccept&7|&cdeny &7(%time%)"
   tpa-no-request: "ㅈ &7你当前没有待处理的传送请求"
   tpa-request-expired: "ㅈ &7传送请求已过期"
   tpa-requester-offline: "ㅈ &7请求玩家已离线, 传送请求自动取消"
@@ -122,8 +126,8 @@ state:
   join-captain-offline: "ㅅ &c该政权的领袖当前不在线, 暂时无法处理申请"
   join-request-exists: "ㅅ &c你已经向「%state%」提交了加入申请, 请耐心等待"
   join-request-other: "ㅅ &c你已有针对「%state%」的加入申请在等待处理"
-  join-request-sent: "ㅊ &a已向「%state%」提交加入申请(%time%)"
-  join-request-notify: "ㅅ &c玩家「%player%」申请加入「%state%」请使用 /goc join accept|deny(%time%)"
+  join-request-sent: "ㅊ &a已向「%state%」提交加入申请 (%time%)"
+  join-request-notify: "ㅈ &7玩家「%player%」申请加入「%state%」请使用 &f/goc join &aaccept&7|&cdeny &7(%time%)"
   join-not-captain: "ㅅ &c只有政权领袖可以处理加入申请"
   join-no-requests: "ㅅ &c当前没有待处理的加入申请"
   join-multiple: "ㅅ &c存在多个加入申请「%players%」请使用 /goc join accept <player> 指定目标"
@@ -156,7 +160,7 @@ state:
   setgovernor-player-not-found: "ㅅ &c未找到玩家"
   setgovernor-player-not-member: "ㅅ &c该玩家不属于你的政权, 无法被任命为总督"
   setgovernor-success: "ㅊ &a已将「%player%」任命为地区「%sector%」的总督"
-  setgovernor-notify: "ㅅ &c你被任命为地区「%sector%」的总督, 拥有该地区的管理权"
+  setgovernor-notify: "ㅊ &a你被任命为地区「%sector%」的总督, 拥有该地区的管理权"
   setgovernor-already: "ㅅ &c玩家「%player%」已经是地区「%sector%」的总督"
   setgovernor-reassigned: "ㅅ &c已移除「%player%」在地区「%old_sector%」的总督职位"
   delgovernor-usage: "ㅅ &c用法 /goc delgovernor <player>"
@@ -167,7 +171,7 @@ state:
   givesector-target-not-found: "ㅅ &c未找到目标政权"
   givesector-target-offline: "ㅅ &c「%state%」的领袖不在线, 无法发送请求"
   givesector-requested: "ㅈ &7已向「%state%」申请赠送地区「%sector%」, 赠送将在 %time% 后过期"
-  givesector-notify: "ㅅ &c「%state%」希望将地区「%sector%」赠予你, 请使用 /goc givesector accept|deny(%time%)"
+  givesector-notify: "ㅈ &7「%state%」希望将地区「%sector%」赠予你, 请使用 &f/goc givesector &aaccept&7|&cdeny &7(%time%)"
   givesector-pending: "ㅅ &c赠送请求正在等待「%state%」处理, 赠送将在%time%后过期"
   givesector-none: "ㅅ &c当前没有待处理的领地赠送请求"
   givesector-multiple: "ㅅ &c存在多个请求, 请指定来源: %requests%"
@@ -197,7 +201,7 @@ state:
   capital-moved: "ㅊ &a政权首都已迁往地区「%sector%」"
   capital-emergency: "ㅅ &c首都已紧急迁往地区「%sector%」"
   capital-move-war: "ㅅ &c战争期间无法使用常规迁都, 请使用战时紧急迁都指令"
-  capital-move-cooldown: "ㅅ &c迁都冷却中(%time%)"
+  capital-move-cooldown: "ㅅ &c迁都冷却中 (%time%)"
   capital-move-no-economy: "ㅅ &c未检测到 Vault 经济系统, 无法支付迁都费用"
   capital-move-no-funds: "ㅅ &c迁都费用不足, 所需金额: %cost%"
   capital-move-payment-failed: "ㅅ &c扣款失败, 请稍后再试"
@@ -220,7 +224,7 @@ state:
   maintenance-warning: "&c%sector%的燃料不足, 约 %time% 后耗尽" #[燃料]
   production-empty: "ㅅ &c当前没有可领取的产出"
   production-no-economy: "ㅅ &c未检测到 Vault 经济系统, 无法领取金钱产出"
-  production-claimed: "ㅊ &a已领取产出 &f%money% &7| &f%items%"
+  production-claimed: "ㅊ &a已领取产出"
   upgrade-name-storage: "产出存储"
   upgrade-name-efficiency: "产出效率"
   maintenance-overdue: "&7%sector%的燃料已过期, 已等待 %time%"
@@ -310,7 +314,7 @@ ideology:
   list-line: "&e%id% &7- %display% &8| 生产加成 &a%bonus%% | 首都加成 &6%capital%%"
   invalid-id: "&c未知意识形态 ID"
   set-success: "ㅊ &a你已选择意识形态: %display%"
-  cooldown: "ㅅ &c意识形态切换冷却中(%time%)"
+  cooldown: "ㅅ &c意识形态切换冷却中 (%time%)"
   gui-selected: "&a当前选择"
   gui-available: "&e点击切换"
   gui-cooldown: "&c冷却中 %time%"
@@ -346,13 +350,13 @@ war:
   condemn-cooldown: "ㅅ &c谴责命令冷却中, 还需等待 %time%"
   condemn-notify: "ㅋ &6你的政权正在被「%state%」谴责, 对方将在倒计时结束后可以宣战!"
   condemn-required: "ㅅ &c你必须先使用 /goc warcondemn 谴责目标政权"
-  condemn-wait: "ㅅ &c谴责倒计时尚未结束(%time%)"
+  condemn-wait: "ㅅ &c谴责倒计时尚未结束 (%time%)"
   condemn-wrong-target: "ㅅ &c你当前的谴责目标是「%state%」, 无法对其他政权宣战"
   condemn-ready-placeholder: "可宣战"
   declare-requirements: "ㅅ &c宣战前需要至少 %members_required% 名成员且拥有 %sectors_required% 个地区（当前: %members_current% 名成员, %sectors_current% 个地区）"
   surrender-usage: "ㅅ &c用法 /goc war surrender"
   surrender-requested: "ㅊ &a已向「%state%」递交投降请求, 对方有 %time% 回应"
-  surrender-notify: "ㅋ &6%「state%」希望向你投降, 请使用 /goc surrender accept|deny(%time%)"
+  surrender-notify: "ㅋ &6%「state%」希望向你投降, 请使用 &f/goc surrender &aaccept&6|&cdeny &6(%time%)"
   surrender-pending: "ㅊ &a已提交投降请求, 等待「%state%」回应"
   surrender-other: "ㅈ &7当前正在处理「%state%」的投降请求, 稍后再试"
   surrender-not-war: "ㅅ &c你当前不在主战政权战争中, 无法投降"
@@ -381,8 +385,8 @@ war:
   sectors-captured: "ㅋ &6「%winner%」接管了「%loser%」的地区「%sectors%」"
   rewards-distributed: "ㅋ &6「%winners%」获得了「%server%」蓝矿战争补助, 并瓜分了 %loot% 赔款（每国 %share%）"
   camp-broken: "ㅋ &6「%state%」的地区「%sector%」被「%attacker%」摧毁!"
-  camp-damage: "「%state%」的地区「%sector%」受损: ❤ %hp%/%max%" # actionbar
-  camp-damage-self: "你对「%state%」的地区造成了伤害: ❤ %hp%/%max%" # actionbar
+  camp-damage: "&c「%state%」的地区「%sector%」受损: ❤ %hp%/%max%" # actionbar
+  camp-damage-self: "&c你对「%state%」的地区造成了伤害: ❤ %hp%/%max%" # actionbar
   camp-broken-self: "ㅋ &6你摧毁了「%state%」的地区「%sector%」"
   camp-protected: "ㅅ &c你未加入任何政权, 无法破坏立场引擎"
   camp-missing: "ㅅ &c未找到目标信息"
@@ -395,7 +399,7 @@ war:
   civilwar-is-captain: "ㅅ &c你作为政权领袖, 无法发动内战"
   admin-stop-usage: "ㅅ &c用法: /goc admin stopwar <state1> <state2>"
   admin-stop-none: "ㅅ &c未找到这两国之间的战争, 或战争已结束"
-  admin-stop-success: "ㅊ &a已强制结束「%state1%」与「%state2%」之间的战争"
+  admin-stop-success: "ㅋ &6已强制结束「%state1%」与「%state2%」之间的战争"
   civilwar-created: "ㅋ &6你成立了新的政权「%state%」, 脱离「%origin%」"
   civilwar-notify: "ㅋ &6玩家「%player%」脱离「%state%」成立叛军「%rebel%」!"
   civilwar-war-start: "ㅊ &a你已与「%enemy%」进入战争状态!"
@@ -413,7 +417,7 @@ war:
   move-no-sector: "ㅅ &c未找到你政权中的地区「%sector%」"
   move-not-war: "ㅅ &c只有在战争期间才能进行紧急迁都"
   move-used: "ㅅ &c本场战争中已使用过紧急迁都"
-  move-cooldown: "ㅅ &c紧急迁都仍在冷却(%time%)"
+  move-cooldown: "ㅅ &c紧急迁都仍在冷却 (%time%)"
   move-success: "" #ㅊ &a已开始紧急迁都至地区「%sector%」
   move-broadcast: "ㅋ &6「%state%」在战争中紧急迁都至「%sector%」"
   move-already: "ㅅ &c当前首都已位于地区「%sector%」"
