--- a/resources/lang.yml
+++ b/resources/lang.yml
@@ -1,5 +1,5 @@
 # ===============================
-# GovernanceOfColony 1.0.1 - Lang
+# GovernanceOfColony 1.0.3 - Lang
 # ===============================
 
 general:
@@ -11,37 +11,42 @@ general:
   unknown-error: "ㅊ &c发生未知错误, 请联系管理员"
 
 camp:
-  help-header: "§8§m                                            "
+  help-header: "§8§m                   §r §e政权命令 (第%page%/%pages%页) §8§m                   "
+  help-page: "&7第 %page%/%pages% 页"
+  help-previous: "&e<< 上一页"
+  help-next: "&e下一页 >>"
   help-lines:
-    - "§e/goc newstate <state> <sector> §7- 创建政权（或留空自动命名）"
-    - "§e/goc delstate §7- 解散自己的政权（领袖）"
-    - "§e/goc newsector <sector> §7- 为现有政权预留新的地区"
-    - "§e/goc delsector <sector> §7- 移除已有地区的立场引擎"
-    - "§e/goc givesector <sector> <state> §7- 向其他政权赠与自己政权的地区"
-    - "§e/goc newgovernor <player> <sector> §7- 指定地区的总督"
-    - "§e/goc delgovernor <player> §7- 移除指定玩家的总督头衔"
-    - "§e/goc invite <player> §7- 邀请加入"
-    - "§e/goc invite accept | deny §7- 同意/拒绝邀请"
-    - "§e/goc join <state> §7- 申请加入其他政权"
-    - "§e/goc join accept | deny <player> §7- 处理加入申请（领袖）"
-    - "§e/goc leave §7- 退出当前政权"
-    - "§e/goc kick <player> §7- 踢出成员"
-    - "§e/goc tp <sector> §7- 传送到所属政权的指定地区"
-    - "§e/goc tpa <player> §7- 申请传送到同政权成员位置"
-    - "§e/goc tpa accept | deny §7- 同意/拒绝传送申请"
-    - "§e/goc warcondemn <state> §7- 谴责目标政权, 开启宣战倒计时"
-    - "§e/goc war <state> §7- 对目标宣战"
-    - "§e/goc civilwar §7- 对当前政权发动内战"
-    - "§e/goc info §7- 查看政权信息"
-    - "§e/goc list §7- 查看当前世界的所有政权列表"
-    #- "§e/goc bank [info] §7- 查看政权银行信息"
-    #- "§e/goc bank deposit <金额> §7- 向政权银行存款"
-    #- "§e/goc bank withdraw <金额> §7- 政权领袖取款"
-    #- "§e/goc bank log §7- 查看银行交易记录（领袖）"
-    #- "§e/goc tax <金额> §7- 调整政权税率（领袖）"
-    #- "§e/goc reload §7- 重载配置与语言"
+    - "&e/goc &7- 打开政权概览界面"
+    - "&e/goc help [页码] &7- 查看命令帮助"
+    - "&e/goc newstate <state> <sector> &7- 创建政权（或留空自动命名）"
+    - "&e/goc delstate &7- 解散自己的政权（领袖）"
+    - "&e/goc newsector <sector> &7- 为现有政权预留新的地区"
+    - "&e/goc delsector <sector> &7- 移除已有地区的立场引擎"
+    - "&e/goc givesector <sector> <state> &7- 向其他政权赠与自己政权的地区"
+    - "&e/goc newgovernor <player> <sector> &7- 指定地区的总督"
+    - "&e/goc delgovernor <player> &7- 移除指定玩家的总督头衔"
+    - "&e/goc invite <player> &7- 邀请加入"
+    - "&e/goc invite accept | deny &7- 同意/拒绝邀请"
+    - "&e/goc join <state> &7- 申请加入其他政权"
+    - "&e/goc join accept | deny <player> &7- 处理加入申请（领袖）"
+    - "&e/goc leave &7- 退出当前政权"
+    - "&e/goc kick <player> &7- 踢出成员"
+    - "&e/goc tp <sector> &7- 传送到所属政权的指定地区"
+    - "&e/goc tpa <player> &7- 申请传送到同政权成员位置"
+    - "&e/goc tpa accept | deny &7- 同意/拒绝传送申请"
+    - "&e/goc warcondemn <state> &7- 谴责目标政权, 开启宣战倒计时"
+    - "&e/goc war <state> &7- 对目标宣战"
+    - "&e/goc civilwar &7- 对当前政权发动内战"
+    - "&e/goc info &7- 查看政权信息"
+    - "&e/goc list &7- 查看当前世界的所有政权列表"
+    #- "&e/goc bank [info] &7- 查看政权银行信息"
+    #- "&e/goc bank deposit <金额> &7- 向政权银行存款"
+    #- "&e/goc bank withdraw <金额> &7- 政权领袖取款"
+    #- "&e/goc bank log &7- 查看银行交易记录（领袖）"
+    #- "&e/goc tax <金额> &7- 调整政权税率（领袖）"
+    #- "&e/goc reload &7- 重载配置与语言"
     - "§8§m                                            "
-  unknown: "ㅅ &c未知的子命令使用 /goc 查看帮助"
+  unknown: "ㅅ &c未知的子命令使用 /goc help 查看帮助"
   not-found: "ㅅ &c未找到你的政权, 或你尚未加入任何政权"
   info-opening: "ㅈ &7正在打开你的政权信息..."
 
@@ -192,6 +197,8 @@ state:
   sector-move-inventory: "ㅅ &c你的背包没有足够的空间存放迁移令牌, 请清理背包后重试"
   relocation-drop-blocked: "ㅅ &c迁移令牌无法丢弃, 请在目标位置放置以完成迁移"
   teleport-success: "ㅊ &a已传送至「%sector%」"
+  teleport-wait: "ㅈ &7将在 %time% 后传送至「%sector%」, 请稍候"
+  teleport-cancelled: "ㅅ &c传送已取消: %reason%"
   sector-remove-success: "ㅅ &c已移除「%sector%」的立场引擎"
   sector-capital-protected: "ㅅ &c首都地区无法通过该指令移动或移除, 请使用迁都功能"
   sector-created: "&a成功建立地区: %sector%" # actionbar #所属政权: &f「%state%」
@@ -225,6 +232,7 @@ state:
   production-empty: "ㅅ &c当前没有可领取的产出"
   production-no-economy: "ㅅ &c未检测到 Vault 经济系统, 无法领取金钱产出"
   production-claimed: "ㅊ &a已领取产出"
+  upgrade-name-boundary: "边界扩展"
   upgrade-name-storage: "产出存储"
   upgrade-name-efficiency: "产出效率"
   maintenance-overdue: "&7%sector%的燃料已过期, 已等待 %time%"
@@ -248,6 +256,7 @@ state:
   upgrade-name-fuel: "燃料上限"
   upgrade-name-heal: "回血效率"
   upgrade-name-fatigue: "挖掘疲劳"
+  upgrade-name-boundary: "边界扩展"
 
 bank:
   disabled: "ㅅ &c政权银行功能已禁用"
