--- a/resources/config.yml
+++ b/resources/config.yml
@@ -151,6 +151,17 @@ camp:
             OBSIDIAN: 64
           items-display: "64 黑曜石"
           boundary-radius: 8
+  modules:
+    realisticseasons:
+      enabled: true
+      display: "RealisticSeasons 恒温模块"
+      cost: 8000
+      cost-display: "8000 ₿"
+      items: { }
+      items-display: "无"
+      effect:
+        type: "realisticseasons-temperature"
+        temperature: 20.0
   move:
     cost: 0.0
     items: { }           # 支持 ItemsAdder 物品（itemsadder:命名空间:物品）
