--- a/resources/plugin.yml
+++ b/resources/plugin.yml
@@ -1,10 +1,10 @@
 name: GovernanceOfColony
 main: dev.ameruzily.campsystem.CampSystem
-version: 1.0.5
+version: 1.0.7
 api-version: '1.20'
 authors: [ Ameruzily ]
 description: State-based camp & war system (State refactor)
-softdepend: [GraveX]
+softdepend: [GraveX, PlaceholderAPI, RealisticSeasons, ItemsAdder]
 
 commands:
   goc:
